# nexusfs

./: .gitignore  CMakeLists.txt  README.md  sample.txt  vcpkg.json
.github/workflows/: ci.yml  dashboard-ci.yml
dashboard/: .env.example  README.md  next.config.ts  package.json
dashboard/src/app/: actions.ts  globals.css  layout.tsx  page.tsx
dashboard/src/lib/: nexusfs.ts
docs/: ARCHITECTURE.md  LOCAL_DEVELOPMENT.md  PROJECT_STATUS.md
include/nexusfs/admin/: admin_client.hpp
include/nexusfs/app/: nexusfs_service.hpp
include/nexusfs/cli/: command_line.hpp
include/nexusfs/cluster/: cluster_node_foundation.hpp  heartbeat_scheduler.hpp  metadata_catalog.hpp  metadata_catalog_synchronizer.hpp  metadata_coordinator.hpp  metadata_ownership.hpp  operation_journal.hpp  peer_transport.hpp  placement_rebalancer.hpp  replica_maintenance.hpp  replica_maintenance_scheduler.hpp  replica_repair.hpp
include/nexusfs/daemon/: daemon_configuration.hpp
include/nexusfs/http/: http_router.hpp  http_server.hpp  http_session.hpp
include/nexusfs/observability/: json_logger.hpp  metrics_registry.hpp
include/nexusfs/security/: request_security.hpp
include/nexusfs/storage/: chunk_store.hpp  chunker.hpp  durable_file.hpp  file_manifest.hpp  file_manifest_codec.hpp  file_reconstructor.hpp  file_verifier.hpp  manifest_store.hpp  sha256_hasher.hpp  storage_recovery.hpp
scripts/: run-daemon.ps1  run-dashboard.ps1  start-local.ps1
src/: admin_main.cpp  daemon_main.cpp  main.cpp
src/admin/: admin_client.cpp
src/app/: nexusfs_service.cpp
src/cli/: command_line.cpp
src/cluster/: cluster_node_foundation.cpp  heartbeat_scheduler.cpp  metadata_catalog.cpp  metadata_catalog_synchronizer.cpp  metadata_coordinator.cpp  metadata_ownership.cpp  operation_journal.cpp  peer_catalog_transport.cpp  peer_manifest_transport.cpp  peer_transport.cpp  placement_rebalancer.cpp  replica_maintenance.cpp  replica_maintenance_scheduler.cpp  replica_repair.cpp
src/daemon/: daemon_configuration.cpp
src/http/: http_router.cpp  http_router_admin.cpp  http_router_cluster.cpp  http_router_cluster_catalog.cpp  http_router_cluster_manifest.cpp  http_router_cluster_membership.cpp  http_router_cluster_rebalance.cpp  http_router_logging.cpp  http_router_observability.cpp  http_server.cpp  http_session.cpp
src/observability/: json_logger.cpp  metrics_registry.cpp
src/security/: request_security.cpp
src/storage/: chunk_store.cpp  chunker.cpp  durable_file.cpp  file_manifest.cpp  file_manifest_codec.cpp  file_reconstructor.cpp  file_verifier.cpp  manifest_store.cpp  sha256_hasher.cpp  storage_recovery.cpp
tests/: test_automatic_replication.cpp  test_cli.cpp  test_cluster_node_foundation.cpp  test_cluster_runtime.cpp  test_consistency_rebalancing.cpp  test_daemon_configuration.cpp  test_durable_file.cpp  test_dynamic_membership.cpp  test_http.cpp  test_http_cluster.cpp  test_http_logging.cpp  test_http_metrics.cpp  test_http_server_lifecycle.cpp  test_http_upload.cpp  test_json_logger.cpp  test_main.cpp  test_manifest_transport.cpp  test_metadata_catalog.cpp  test_metadata_catalog_sync.cpp  test_metadata_ownership.cpp  test_metadata_recovery.cpp  test_metrics_endpoint.cpp  test_metrics_registry.cpp  test_peer_transport.cpp  test_replica_maintenance.cpp  test_replica_maintenance_scheduler.cpp  test_replica_repair.cpp  test_security_admin.cpp  test_service.cpp  test_service_concurrency.cpp  test_storage_recovery.cpp
